--- a/shopapp-angular/shopappfe/package.json
+++ b/shopapp-angular/shopappfe/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.3.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "class-transformer": "^0.5.1",
