update admin-product, admin-category, admin-order

--- a/shopapp-backend/shopappbe/src/main/resources/application.yml
+++ b/shopapp-backend/shopappbe/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: dongle170503
-#    password:
+  #    password:
   jpa:
     show-sql: true
     hibernate:
@@ -27,4 +27,8 @@ api:
   prefix: api/v1
 jwt:
   expiration: 2592000
-  secretKey: TaqlmGv1iEDMRiFp/pHuID1+T84IABfuA0xXh4GhiUI=
+  secretKey: TaqlmGv1iEDMRiFp/
+logging:
+    level:
+      org:
+        springframework.security: DEBUG
