--- a/shopapp-backend/shopappbe/src/main/resources/application.yml
+++ b/shopapp-backend/shopappbe/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 8088
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/shopapp?useSSL=false&serverTimezone=UTC
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: dongle170503
+    password:  ${MYSQL_ROOT_PASSWORD:dongle170503}
   #    password:
   jpa:
     show-sql: true
@@ -23,12 +23,17 @@ spring:
     basename: i18n/messages
     encoding: UTF-8
     default-locale: en
+  flyway:
+    locations: classpath:/db/migration,classpath:/dev/db/migration
+      #Phiên bản baseline sẽ = 1 và không thực hiện bất kỳ thay đổi nào trong DB
+    baseline-on-migrate: true
+    baseline-version: 0
 api:
   prefix: api/v1
 jwt:
   expiration: 2592000
-  secretKey: TaqlmGv1iEDMRiFp/
+  secretKey: TaqlmGv1iEDMRiFp/pHuID1+T84IABfuA0xXh4GhiUI=
 logging:
-    level:
-      org:
-        springframework.security: DEBUG
+  level:
+    org:
+      springframework.security: DEBUG
