--- a/shopapp-backend/shopappbe/src/main/resources/application.yml
+++ b/shopapp-backend/shopappbe/src/main/resources/application.yml
@@ -32,6 +32,7 @@ api:
   prefix: api/v1
 jwt:
   expiration: 2592000
+  expiration-refresh-token: 5184000
   secretKey: TaqlmGv1iEDMRiFp/pHuID1+T84IABfuA0xXh4GhiUI=
 logging:
   level:
